@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform {
  -String designation
}

class Organization {
  -String name
  -String NIF
}

class Collaborator {
  -String name
  -String email
}

class Manager {
  -String name
  -String email
}

class Freelancer {
  -String id
  -String name
  -String expertiseLevel
  -String email
  -String NIF
  -String IBAN
  -String address
  -String country
}

class User {
  -String email
  -String password
}

class Task {
 -String id
 -String briefDescription
 -Integer timeDuration
 -Double costPerHour
 -String taskCategory
}

class PaymentTransaction{
  -String id
  -Date endDate
  -Integer delay
  -String workQualityDescription
  -Double payAmount
}

class PaymentDay {
  -Date timeOfDay
  -Date dayOfMonth
}

class ExternalPwdGeneratorAlgorithm {
}

Platform "1" -- "*" Organization : has registered >
Platform "1" -- "1" ExternalPwdGeneratorAlgorithm : resort to >
Platform "1" -- "*" Freelancer : has/uses >

Organization "1" -- "1" Collaborator: has >
Organization "1" -- "1" Manager: has >
Organization "1" -- "*" Task: has >
Organization "1" -- "*" PaymentTransaction: has >

Collaborator "0..1" -- "1" User: acts like >
Collaborator "1" -- "*" Freelancer: create >
Collaborator "1" -- "*" Task: create >
Collaborator "1" -- "*" PaymentTransaction: create >
Collaborator "1" -- "*" PaymentTransaction: loads file of >
Collaborator "1" -- "1..*" PaymentTransaction: sees statistics about >

Manager "0..1" -- "1" User: acts like >
Manager "1" -- "1" PaymentDay : sets >
Manager "1" -- "1..*" PaymentTransaction: sees statistics about >

Task "1..*" -- "1" Freelancer: is assigned to >

PaymentTransaction "1" -- "1" Freelancer: relates to >
PaymentTransaction "1" -- "1" Task: relates to >

PaymentDay "1" -- "0..*" PaymentTransaction : is related to >

ExternalPwdGeneratorAlgorithm "1" -- "*" User : generate password >

@enduml